package ar.utn.ba.ddsi.models.entities;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Ruta {
  String path;
  String nombre;
  Long idRuta;
}
