@startuml


class Hecho {
    -titulo: String
    -descripcion: String
    -categoria: Categoria
    -ubicacion: Ubicacion
    -fecha_acontecimiento: LocalDate
    -fecha_carga: LocalDate
    -origen: Origen
    -fueEliminado: boolean
    -etiquetas: Set<Etiqueta>

    +agregarEtiqueta(etiqueta: Etiqueta): void
}

class Categoria {
    -nombre: String
}

enum Origen {
    CARGA_MANUAL
    PROVENIENTE_DE_DATASET
    PROVISTO_POR_CONTRIBUYENTE
}

class Etiqueta {
    -nombre: String
}

class Ubicacion{
    -latitud: double
    -longitud: double
}

class Ruta {
  -path: String
  -nombre: String
  -idRuta Long
}

Hecho --> Origen
Hecho --> "*" Etiqueta
Hecho --> Ubicacion
Hecho --> Categoria

@enduml